--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
 }
 
+.nav-link{
+  width: 70%;
+  align-items: center;
+  justify-content: space-around;
+  display: flex;
+  list-style: none;
+  color: blue;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
